fix: overflow when notif appear

--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -19,11 +19,10 @@
   border-bottom-right-radius: 0.3rem;
 }
 
-@media (min-width: 768px) {
-  .gradient-form {
-    height: 100vh !important;
-  }
+.gradient-form {
+  height: 100vh !important;
 }
+
 @media (min-width: 769px) {
   .gradient-custom-2 {
     border-top-right-radius: 0.3rem;
